--- a/index.html
+++ b/index.html
@@ -118,5 +118,95 @@ START LEARNING HOW TO CODE & DESIGN TODAY WITH JB WEB DEVELOPER</p>
 </div>
 <a class="check-out" href="#">OR CHECKOUT MY RESOURCES PAGE <i class='bx bx-right-arrow-alt'></i></a> 
 </nav>
+<section class="services-provided">
+  <h3 class="title">GO FROM BEGINNER TO ADVANCED DEVELOPER WITH MY CODING & DESIGNING COURSES</h3>
+<div class="services">
+  <div class="projects">
+    <div class="about-it">
+      <h3>REAL-WORLD PROJECTS</h3>
+      <p>All my courses are structured around real-world projects, so that you get the real coding or designing experience that you need.</p>
+    </div>
+    </div>
+    <div class="projects">
+    <div class="about-it">
+      <h3>LEARN & UNDERSTAND</h3>
+      <p>Don't just copy the code or design from the course — you will truly understand how each technology actually works!</p>
+    </div>
+    </div>
+    <div class="projects">
+    <div class="about-it">
+      <h3>REAL-WORLD PROJECTS</h3>
+      <p>All my courses are structured around real-world projects, so that you get the real coding or designing experience that you need.</p>
+    </div>
+    </div>
+    <div class="projects">
+    <div class="about-it">
+      <h3>PERSONAL SUPPORT</h3>
+      <p>Got stuck and can't move on in the course? Don't worry, I got your back! I offer full personal support in my courses.</p>
+    </div>
+    </div>
+    <div class="projects">
+    <div class="about-it">
+      <h3>PERFECT FOR BEGINNERS</h3>
+      <p>My courses are perfect for absolute beginners. There is no prior coding or design experience needed to get started!</p>
+    </div>
+    </div>
+</div>
+</section>
+<section class="graphics-design">
+  <div class="section-heading">
+    <h3>Graphic Designing Course</h3>
+    <p>To create attractive visual contents to best convey the key messages is termed as Graphics Designing. To create pictorial content to understand the specific needs of users and to learn how to best display visual content through typography, iconography, and photography in a best-illustrated manner is all about learning Graphic Designing course. I focus on providing the latest tech-based guidance and training for Graphic Designing through Building real world projects.</p>
+  </div>
+  <div class="section-details">
+   <a href="#"> <img src="/IMAGES/course2.png" alt=""></a>
+    <div class="about-section">
+      <h4>GraphicsDesign Course</h4>
+      <p>The utimate Design course wich covers Photoshop, illustrator, Canva, Design theory, Branding and logo design</p>
+      <a href="#">View Details</a>
+    </div>
+  </div>
+</section>
+<section class="resources">
+  <h3>GET MY BEST BEST RESOURCES FOR WEB DESIGN, GRAPHIC DESIGN AND DEVELOPMENT</h3>
+  <p>Packed with tons of amazing FREE resources, this resource collection is your perfect guide for starting a brand new web project.
+    I spent countless hours gathering the resources in this list just for you.</p>
+    <p>You're going to find free fonts, stunning images, beautiful icons, HTML and CSS references, testing tools, and so much more, all for free!</p>
+    <a href="#">CHECKOUT THE RESOURCES</a>
+</section>
+<section class="about-me">
+  <div class="name">
+    <img src="/IMAGES/profile.png" alt="">
+    <h3>HI I'M MUKE JOHNBAPTIST aka JB WEB DEVELOPER</h3>
+  </div>
+  <div class="content">
+    <p>I’m a web developer, grahics-designer ,a teacher and founder of <a href="#">Desishub</a> with a great passion for building things with code. I live in the Kireka-Kampala Uganda, where I create amazing, graphics, websites and apps, just like you're gonna build in one of my courses.</p>
+    <p>As an online instructor, I get to mix my two great passions: building things with code and teaching. If I had to describe my coding courses in one sentence, I would say “These are exactly the courses I wish I had when I first started with web design and development”.</p>
+    <p>I want to spare you the pain of going through countless books and articles, so I packed everything I learned about building websites and graphics right into my video courses.</p>
+    <p>I guarantee 100% to offer the best value in all my courses, so you can achieve your goals! Plus, I will be available to answer all the questions you might have along your coding or designing journey.</p>
+    <p>So, let's start learning today!</p>
+  </div>
+</section>
+<nav class="contacts">
+<h3>Contacts</h3>
+<div class="links">
+  <div class="email common">
+    <i class='bx bx-envelope'></i>
+    <p>gmukejohnbaptist@gmail.com</p>
+  </div>
+  <div class="number common">
+    <i class='bx bx-headphone'></i>
+    <p>+256 762 063 160</p>
+  </div>
+  <div class="web common">
+    <i class='bx bx-search'></i>
+    <p>Visit My Website</p>
+  </div>
+  <div class="location common">
+    <i class='bx bxs-map'></i>
+    <p>Kireka, Banda, Kampala-Uganda</p>
+  </div>
+</div>
+</nav>
 </body>
 </html>
