--- a/index.html
+++ b/index.html
@@ -208,5 +208,6 @@ START LEARNING HOW TO CODE & DESIGN TODAY WITH JB WEB DEVELOPER</p>
   </div>
 </div>
 </nav>
+<footer>© 2024 by JB Web developer. All rights reserved.</footer>
 </body>
 </html>
