--- a/details.html
+++ b/details.html
@@ -10,7 +10,7 @@
  <header class="introduction">
 <div class="course-details">
 <h3>Course Detail</h3>
-<p><a href="#">Home</a> / HTML-Css Course</p>
+<p><a href="/index.html">Home</a> / HTML-Css Course</p>
 </div>
  </header> 
  <section class="course-datails">
