--- a/index.html
+++ b/index.html
@@ -52,67 +52,67 @@ START LEARNING HOW TO CODE & DESIGN TODAY WITH JB WEB DEVELOPER</p>
 <p>Master HTML, CSS, Sass, Web Design, JavaScript and Node.js in only a couple of months! These are the only courses that you will need to be a fullstack web developer.</p>
 <div class="course-details">
     <div class="html-css">
-       <a href="#"> <img src="/IMAGES/html.jpg" alt=""></a>
+       <a href="/details.html"> <img src="/IMAGES/html.jpg" alt=""></a>
         <div class="description">
         <h4>HTML/CSS course</h4>
         <p>Everything you need to build fast and beautifull websites with HTML5 and CSS3 in one bundle.</p>
-        <a class="details" href="#">View Details</a>
+        <a class="details" href="/details.html">View Details</a>
         </div>
   </div>
     <div class="html-css">
-       <a href="#"> <img src="/IMAGES/computer.jpg" alt=""></a>
+       <a href="/details copy.html"> <img src="/IMAGES/computer.jpg" alt=""></a>
         <div class="description">
         <h4>Computer Basics Course</h4>
         <p>The ultimate Microsoft Office 2016 Training Bundle The Most Convinient way to boost your confindence And Learn Ms Office 16 inside and out-quickly</p>
-        <a class="details" href="#">View Details</a>
+        <a class="details" href="/details copy.html">View Details</a>
         </div>
   </div>
     <div class="html-css">
-       <a href="#"> <img src="/IMAGES/js.jpg" alt=""></a>
+       <a href="/details copy 2.html"> <img src="/IMAGES/js.jpg" alt=""></a>
         <div class="description">
         <h4>JavaScript Course</h4>
         <p>Javascript is one of the most popular programing languages in the world. Companies like Walmart, Netflix, and paypalrun big internal applications around JavaScript</p>
-        <a class="details" href="#">View Details</a>
+        <a class="details" href="/details copy 2.html">View Details</a>
         </div>
   </div>
     <div class="html-css">
-       <a href="#"> <img src="/IMAGES/sass.jpg" alt=""></a>
+       <a href="/details copy 3.html"> <img src="/IMAGES/sass.jpg" alt=""></a>
         <div class="description">
         <h4>Css-Sass advanced course</h4>
         <p>The most advanced and mordern CSS course on the internet:Master flexbox CSS grid, responsive design,and much more</p>
-        <a class="details" href="#">View Details</a>
+        <a class="details" href="/details copy 3.html">View Details</a>
         </div>
   </div>
     <div class="html-css">
-       <a href="#"> <img src="/IMAGES/python_data.jpg" alt=""></a>
+       <a href="/details copy 4.html"> <img src="/IMAGES/python_data.jpg" alt=""></a>
         <div class="description">
         <h4>Python and data science course</h4>
         <p>Learn from the besics to project leve of python, Numpy, Pandas, Matpl</p>
-        <a class="details" href="#">View Details</a>
+        <a class="details" href="/details copy 4.html">View Details</a>
         </div>
   </div>
     <div class="html-css">
-       <a href="#"> <img src="/IMAGES/php.jpg" alt=""></a>
+       <a href="/details copy 5.html"> <img src="/IMAGES/php.jpg" alt=""></a>
         <div class="description">
         <h4>PHP course</h4>
         <p>Every line off code explained.Learn PHP, PDO, MYSQL & phpmyAdmin to create data driven websites. Self-taught teacher.</p>
-        <a class="details" href="#">View Details</a>
+        <a class="details" href="/details copy 5.html">View Details</a>
         </div>
   </div>
     <div class="html-css">
-       <a href="#"> <img src="/IMAGES/python_beginners.jpg" alt=""></a>
+       <a href="/details copy 6.html"> <img src="/IMAGES/python_beginners.jpg" alt=""></a>
         <div class="description">
         <h4>Python for bignnerrs</h4>
         <p>Everything you need to program in python Build 11 projects and go from bigner to pro in python with the world's most fun project-based python course!</p>
-        <a class="details" href="#">View Details</a>
+        <a class="details" href="/details copy 6.html">View Details</a>
         </div>
   </div>
     <div class="html-css">
-       <a href="#"> <img src="/IMAGES/Websecurity.jpg" alt=""></a>
+       <a href="/details copy 7.html"> <img src="/IMAGES/Websecurity.jpg" alt=""></a>
         <div class="description">
         <h4>Web Security Course</h4>
         <p>Sleep well (and keep your users happy) by protecting your site from all typical attacks on web sites and web apps.</p>
-        <a class="details" href="#">View Details</a>
+        <a class="details" href="/details copy 7.html">View Details</a>
         </div>
   </div>
 </div>
