--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@ START LEARNING HOW TO CODE & DESIGN TODAY WITH JB WEB DEVELOPER</p>
     <p>To create attractive visual contents to best convey the key messages is termed as Graphics Designing. To create pictorial content to understand the specific needs of users and to learn how to best display visual content through typography, iconography, and photography in a best-illustrated manner is all about learning Graphic Designing course. I focus on providing the latest tech-based guidance and training for Graphic Designing through Building real world projects.</p>
   </div>
   <div class="section-details">
-   <a href="#"> <img src="/IMAGES/course2.png" alt=""></a>
+   <a href="/details copy 8.html"> <img src="/IMAGES/course2.png" alt=""></a>
     <div class="about-section">
       <h4>GraphicsDesign Course</h4>
       <p>The utimate Design course wich covers Photoshop, illustrator, Canva, Design theory, Branding and logo design</p>
-      <a href="#">View Details</a>
+      <a href="/details copy 8.html">View Details</a>
     </div>
   </div>
 </section>
